# dev_ocaml

./: .bazeliskrc  .bazelrc  404.html  BUILD.bazel  Makefile  README.adoc  README.md  WORKSPACE.bazel  _config.yml  changelog.html  feed.xml  index.html  index.md  search.json
.github/workflows/: github-pages-asciidoc.yml  jekyll-gh-pages.yml
about/: index.html
bazel/: bazel-modules.html  index.html  macos.html  repositories.html  working-with-bazel.html
book/: constraints.md  namespaces.md  toolchains.md
coswitch/user-guide/: coswitches.html  index.html  local-switches.html  opam-configuration.html
docs/: 404.adoc  Gemfile  _config.yml  about.adoc  changelog.adoc  docs_config.md  index.adoc  index.md
docs/_includes/: footer_ug.html  head.html  header_chapter.html  header_global.html  header_ocaml_refman.html  header_ocaml_ug.html  header_ocaml_ug_chapter.html  header_opam_refman.html  header_opam_ug.html  sidebar.html  sidebar_bazel.html  sidebar_ocaml.html  sidebar_providers_ocaml.html  sidebar_rules_cc.html  sidebar_rules_ocaml.html  sidebar_tools_ocaml.html  sidebar_tools_opam.html  topnav.html
docs/_layouts/: default.html  home.html  page.html  page_bazel.html  page_ocaml_refman.html  page_ocaml_ug.html  page_opam_refman.html  page_opam_ug.html  page_rules_ocaml.html  page_tools_opam.html  page_tools_opam_ug.html  tools_opam_ug.htmlX
docs/_posts/: 2022-03-30-welcome-to-jekyll.markdown
docs/assets/: styles.css
docs/bazel/: bzlmod.adoc  index.adoc  macos.adoc  working_with_bazel.adoc  workspaces.adoc
docs/css/: asciidoc.css  customstyles.css
docs/devguide/: index.md
docs/js/: customscripts.js
docs/ocaml/: build-discipline.adoc  build-protocols.adoc  dependency_models.adoc  index.adoc  language.adoc  toolchains.adoc
docs/refman/: cfgdefs.md  config.md  config_ocaml.md  config_opam.md  configurable_defaults_doc.md  docs_providers_ocaml.md  docs_providers_ppx.md  functions.md  index.md  interop_doc.md  macros.md  ocaml_archive_doc.md  providers_ocaml.md  providers_opam.md  providers_ppx.md  rules_ocaml.md  rules_ppx.md
docs/rules/: docs_rules_ocaml.md  docs_rules_ppx.md
docs/rules_ocaml/ug/: BUILD.bazel  aggregators.adoc  bootstrap.adoc  build_rules.adoc  caching.adoc  collections.adoc  conditional.adoc  configprofiles.adoc  configrules.adoc  configuration.adoc  conventions.adoc  dependencies_cc.adoc  dependencies_ocaml.adoc  deployment.adoc  depmgmt.adoc  development.adoc  diagnostics.adoc  filegen.adoc  getting_started.adoc  index.adoc  interop.adoc  maintenance.adoc  misc.adoc  module_binding.adoc  namespacing.adoc  ocaml_archive.adoc  ocaml_executable.adoc  ocaml_import.adoc  ocaml_library.adoc  ocaml_ns.adoc  offline.adoc  opam.adoc  optimization.adoc  ppx.adoc  profiles.adoc  querying.adoc  signatures.adoc  stamping.adoc  structures.adoc  testing.adoc  (+4 more)
docs/ug/: aggregators.md  aspects.md  bootstrap.md  build_rules.md  caching.md  cc_deps.md  collections.md  conditional.md  configdefs_doc.md  configprofiles.md  configrules.md  configurable_defaults.md  configuration.md  conventions.md  conventions_doc.md  defaults_configurable.md  dependencies_cc.md  dependencies_ocaml.md  dependencies_opam.md  deployment.md  depmgmt.md  development.md  filegen.md  index.md  interop.md  maintenance.md  misc.md  namespacing.md  ocaml_archive.md  ocaml_deps.md  ocaml_executable.md  ocaml_import.md  ocaml_library.md  ocaml_module.md  ocaml_ns.md  ocaml_signature.md  offline.md  opam.md  optimization.md  ppx.md  (+12 more)
ocaml/: build-discipline.html  dependency-models.html  language.html  toolchains.html
rules/: docs_rules_ocaml.md
rules-ocaml/: providers.html
rules-ocaml/dev-guide/: cc_deps.html  index.html  ppx.html  toolchains.html
rules-ocaml/reference/: functions_refman.bzl  index.html  ocaml-rules.html
rules-ocaml/user-guide/: aggregates.html  aspects.html  bootstrapping.html  build-rules.html  caching.html  compilers.html  conditional.html  configurable-defaults.html  configuration.html  contexts.html  dependencies-cc.html  dependencies-ocaml.html  dependencies.html  deployment.html  diagnostics.html  executables.html  file-generation.html  index.html  interop.html  linking.html  maintenance.html  modules.html  namespacing.html  obazl-conventions.html  offline.html  opam.html  optimization.html  ppx.html  preprocessing.html  profiles.html  providers.html  querying.html  refactoring.html  repositories.html  separate-compilation.html  signatures.html  split-dependencies.html  (+10 more)
src/: BUILD.bazel  config.yml  index_main.md
src/assets/css/: style.css
src/refman/: BUILD.bazel  config_main.md  config_ocaml.bzl  config_opam.bzl  functions_refman.bzl  index_main.md  index_refman.md  interop.md  providers_ocaml.bzl  providers_opam.bzl  providers_ppx.bzl  rules_ocaml.bzl  rules_ppx.bzl
src/ug/: BUILD.bazel  aspects_ug.md  bootstrap_ug.md  build_rules_ug.md  caching_ug.md  collections_ug.md  conditional_ug.md  configprofiles_ug.md  configrules_ug.md  configurable_defaults_ug.md  configuration_ug.md  conventions_ug.md  dependencies_cc_ug.md  dependencies_ocaml_ug.md  dependencies_opam_ug.md  depmgmt_ug.md  development_ug.md  diagnostics_ug.md  filegen_ug.md  getting_started_ug.md  index_ug.md  interop_ug.md  maintenance_ug.md  misc_ug.md  namespacing_ug.md  ocaml_archive_ug.md  ocaml_executable_ug.md  ocaml_import_ug.md  ocaml_library_ug.md  ocaml_module_ug.md  ocaml_ns_ug.md  ocaml_signature_ug.md  ocamldeps.md  offline_ug.md  opam_ug.md  optimization_ug.md  ppx_ug.md  querying_ug.md  refactoring_ug.md  testing_ug.md  (+6 more)
stardoc/: BUILD.bazel  ListRules.java  StardocOutputProtos.java
stardoc/templates/asciidoc/: functions.vm  header_functions.vm  header_providers_ocaml.vm  header_rules_ocaml.vm  header_tools_obazl.vm  provider.vm  rule.vm  rule_freestanding.vm  rule_tools_ocaml.vm  sidebar_rules_ocaml_hdr.vm  sidebar_rules_ocaml_item.vm
stardoc/templates/dita/: func_config.vm
stardoc/templates/markdown/: func_config.vm  header_config_ppx.vm  header_functions.vm  header_providers_ocaml.vm  provider_config.vm
v2/: blog.adoc  opam.adoc  preview.adoc
(+191 files in other folders)
