load("@bazel_skylib//rules:common_settings.bzl", "bool_flag")
load("@bazel_skylib//rules:copy_file.bzl", "copy")

bool_flag( name = "dita", build_setting_default = False )

config_setting( name = "dita_enabled", flag_values = { ":dita": str(True) })

####
# copy_file("signature_ug.adoc, src, out, is_executable, allow_symlink, kwargs)


