load("@bazel_pandoc//:pandoc.bzl", "pandoc")

genrule(
    name = "[config",
    srcs = ["config.yml"],
    outs = ["_config.yml"],
    cmd = "\n".join([
        "cp $< $@"
    ]),
)
# pandoc(
#     name = "config",
#     src = "config.yml",
#     output = "_config.yml",
#     visibility = ["//visibility:public"],
# )

pandoc(
    name = "index",
    src = "index_main.md",
    output = "index.md",
    visibility = ["//visibility:public"],
)

